MODBULKOPS-304 Checkstyle applied