@@ -8,6 +8,8 @@ import static org.folio.bulkops.util.Constants.QUERY_PATTERN_CODE;
 import static org.folio.bulkops.util.Constants.QUERY_PATTERN_NAME;
 import static org.folio.bulkops.util.Utils.encode;
 
+import java.util.Collections;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.folio.bulkops.client.ContributorTypesClient;
@@ -29,9 +31,6 @@ import org.folio.bulkops.exception.ReferenceDataNotFoundException;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
-
 @Service
 @Log4j2
 @RequiredArgsConstructor
@@ -51,17 +50,20 @@ public class InstanceReferenceService {
     try {
       return isEmpty(id) ? EMPTY : instanceStatusesClient.getById(id).getName();
     } catch (Exception e) {
-      throw new ReferenceDataNotFoundException(format("Instance status was not found by id=%s", id));
+      throw new ReferenceDataNotFoundException(format("Instance status was not found by id=%s",
+              id));
     }
   }
 
   @Cacheable(cacheNames = "instanceStatusIds")
   public String getInstanceStatusIdByName(String name) {
-    var response = instanceStatusesClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
+    var response = instanceStatusesClient.getByQuery(String.format(QUERY_PATTERN_NAME,
+            encode(name)), 1);
     if (response.getStatuses().isEmpty()) {
-      throw new ReferenceDataNotFoundException(format("Instance status was not found by name=%s", name));
+      throw new ReferenceDataNotFoundException(format("Instance status was not found by name=%s",
+              name));
     }
-    return response.getStatuses().get(0).getId();
+    return response.getStatuses().getFirst().getId();
   }
 
   @Cacheable(cacheNames = "modesOfIssuanceNames")
@@ -69,26 +71,31 @@ public class InstanceReferenceService {
     try {
       return isEmpty(id) ? EMPTY : modesOfIssuanceClient.getById(id).getName();
     } catch (Exception e) {
-      throw new ReferenceDataNotFoundException(format("Mode of issuance was not found by id=%s", id));
+      throw new ReferenceDataNotFoundException(
+              format("Mode of issuance was not found by id=%s", id));
     }
   }
 
   @Cacheable(cacheNames = "modesOfIssuanceIds")
   public String getModeOfIssuanceIdByName(String name) {
-    var response = modesOfIssuanceClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
+    var response = modesOfIssuanceClient.getByQuery(
+            String.format(QUERY_PATTERN_NAME, encode(name)), 1);
     if (response.getModes().isEmpty()) {
-      throw new ReferenceDataNotFoundException(format("Mode of issuance was not found by name=%s", name));
+      throw new ReferenceDataNotFoundException(
+              format("Mode of issuance was not found by name=%s", name));
     }
-    return response.getModes().get(0).getId();
+    return response.getModes().getFirst().getId();
   }
 
   @Cacheable(cacheNames = "instanceStatisticalCodes")
   public StatisticalCode getStatisticalCodeByName(String name, String tenantId) {
-    var response = statisticalCodeClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)));
+    var response = statisticalCodeClient.getByQuery(
+            String.format(QUERY_PATTERN_NAME, encode(name)));
     if (response.getStatisticalCodes().isEmpty()) {
-      throw new ReferenceDataNotFoundException(format("Statistical code was not found by name=%s", name));
+      throw new ReferenceDataNotFoundException(format("Statistical code was not found by name=%s",
+              name));
     }
-    return response.getStatisticalCodes().get(0);
+    return response.getStatisticalCodes().getFirst();
   }
 
   @Cacheable(cacheNames = "instanceStatisticalCodeNames")
@@ -96,7 +103,8 @@ public class InstanceReferenceService {
     try {
       return statisticalCodeClient.getById(id);
     } catch (Exception e) {
-      throw new ReferenceDataNotFoundException(format("Statistical code was not found by id=%s", id));
+      throw new ReferenceDataNotFoundException(format("Statistical code was not found by id=%s",
+              id));
     }
   }
 
@@ -105,7 +113,8 @@ public class InstanceReferenceService {
     try {
       return statisticalCodeTypeClient.getById(id);
     } catch (Exception e) {
-      throw new ReferenceDataNotFoundException(format("Statistical code type was not found by id=%s", id));
+      throw new ReferenceDataNotFoundException(
+              format("Statistical code type was not found by id=%s", id));
     }
   }
 
@@ -120,11 +129,13 @@ public class InstanceReferenceService {
 
   @Cacheable(cacheNames = "instanceTypeIds")
   public String getInstanceTypeIdByName(String name) {
-    var response = instanceTypesClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
+    var response = instanceTypesClient.getByQuery(
+            String.format(QUERY_PATTERN_NAME, encode(name)), 1);
     if (response.getTypes().isEmpty()) {
-      throw new ReferenceDataNotFoundException(format("Instance type was not found by name=%s", name));
+      throw new ReferenceDataNotFoundException(
+              format("Instance type was not found by name=%s", name));
     }
-    return response.getTypes().get(0).getId();
+    return response.getTypes().getFirst().getId();
   }
 
   @Cacheable(cacheNames = "natureOfContentTermNames")
@@ -132,17 +143,20 @@ public class InstanceReferenceService {
     try {
       return isEmpty(id) ? EMPTY : natureOfContentTermsClient.getById(id).getName();
     } catch (Exception e) {
-      throw new ReferenceDataNotFoundException(format("Nature of content term was not found by id=%s", id));
+      throw new ReferenceDataNotFoundException(
+              format("Nature of content term was not found by id=%s", id));
     }
   }
 
   @Cacheable(cacheNames = "natureOfContentTermIds")
   public String getNatureOfContentTermIdByName(String name) {
-    var response = natureOfContentTermsClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
+    var response = natureOfContentTermsClient.getByQuery(
+            String.format(QUERY_PATTERN_NAME, encode(name)), 1);
     if (response.getTerms().isEmpty()) {
-      throw new ReferenceDataNotFoundException(format("Nature of content term was not found by name=%s", name));
+      throw new ReferenceDataNotFoundException(
+              format("Nature of content term was not found by name=%s", name));
     }
-    return response.getTerms().get(0).getId();
+    return response.getTerms().getFirst().getId();
   }
 
   @Cacheable(cacheNames = "instanceFormatNames")
@@ -150,23 +164,26 @@ public class InstanceReferenceService {
     try {
       return isEmpty(id) ? EMPTY : instanceFormatsClient.getById(id).getName();
     } catch (Exception e) {
-      throw new ReferenceDataNotFoundException(format("Instance format was not found by id=%s", id));
+      throw new ReferenceDataNotFoundException(format("Instance format was not found by id=%s",
+              id));
     }
   }
 
   @Cacheable(cacheNames = "instanceFormatIds")
   public String getInstanceFormatIdByName(String name) {
-    var response = instanceFormatsClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
+    var response = instanceFormatsClient.getByQuery(String.format(QUERY_PATTERN_NAME,
+            encode(name)), 1);
     if (response.getFormats().isEmpty()) {
-      throw new ReferenceDataNotFoundException(format("Instance format was not found by name=%s", name));
+      throw new ReferenceDataNotFoundException(format("Instance format was not found by name=%s",
+              name));
     }
-    return response.getFormats().get(0).getId();
+    return response.getFormats().getFirst().getId();
   }
 
   @Cacheable(cacheNames = "instanceFormats")
   public InstanceFormats getInstanceFormatsByCode(String code) {
-    return isNull(code) ?
-      InstanceFormats.builder().formats(Collections.emptyList()).totalRecords(0).build() :
+    return isNull(code)
+            ? InstanceFormats.builder().formats(Collections.emptyList()).totalRecords(0).build() :
       instanceFormatsClient.getByQuery(String.format(QUERY_PATTERN_CODE, encode(code)), 1);
   }
 
@@ -181,11 +198,12 @@ public class InstanceReferenceService {
 
   @Cacheable(cacheNames = "instanceNoteTypes")
   public String getNoteTypeIdByName(String name) {
-    var noteTypes = instanceNoteTypesClient.getNoteTypesByQuery(format(QUERY_PATTERN_NAME, encode(name)), 1);
+    var noteTypes = instanceNoteTypesClient.getNoteTypesByQuery(format(QUERY_PATTERN_NAME,
+            encode(name)), 1);
     if (noteTypes.getInstanceNoteTypes().isEmpty()) {
       throw new ReferenceDataNotFoundException(format("Note type not found by name=%s", name));
     }
-    return noteTypes.getInstanceNoteTypes().get(0).getId().toString();
+    return noteTypes.getInstanceNoteTypes().getFirst().getId().toString();
   }
 
   @Cacheable(cacheNames = "allInstanceNoteTypes")
@@ -195,29 +213,31 @@ public class InstanceReferenceService {
 
   @Cacheable(cacheNames = "contributorTypesByName")
   public ContributorTypeCollection getContributorTypesByName(String name) {
-    return isNull(name) ?
-      new ContributorTypeCollection().contributorTypes(Collections.emptyList()).totalRecords(0) :
+    return isNull(name)
+            ? new ContributorTypeCollection().contributorTypes(Collections.emptyList())
+            .totalRecords(0) :
       contributorTypesClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
   }
 
   @Cacheable(cacheNames = "contributorTypesByCode")
   public ContributorTypeCollection getContributorTypesByCode(String code) {
-    return isNull(code) ?
-      new ContributorTypeCollection().contributorTypes(Collections.emptyList()).totalRecords(0) :
-      contributorTypesClient.getByQuery(String.format(QUERY_PATTERN_CODE, encode(code)), 1);
+    return isNull(code)
+            ? new ContributorTypeCollection().contributorTypes(
+                    Collections.emptyList()).totalRecords(0) : contributorTypesClient.getByQuery(
+                            String.format(QUERY_PATTERN_CODE, encode(code)), 1);
   }
 
   @Cacheable(cacheNames = "instanceTypesByNames")
   public InstanceTypes getInstanceTypesByName(String name) {
-    return isNull(name) ?
-      InstanceTypes.builder().types(Collections.emptyList()).totalRecords(0).build() :
+    return isNull(name)
+            ? InstanceTypes.builder().types(Collections.emptyList()).totalRecords(0).build() :
       instanceTypesClient.getByQuery(String.format(QUERY_PATTERN_NAME, encode(name)), 1);
   }
 
   @Cacheable(cacheNames = "instanceTypesByCodes")
   public InstanceTypes getInstanceTypesByCode(String code) {
-    return isNull(code) ?
-      InstanceTypes.builder().types(Collections.emptyList()).totalRecords(0).build() :
+    return isNull(code)
+            ? InstanceTypes.builder().types(Collections.emptyList()).totalRecords(0).build() :
       instanceTypesClient.getByQuery(String.format(QUERY_PATTERN_CODE, encode(code)), 1);
   }
 }
