@@ -12,6 +12,13 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.lang.reflect.InvocationTargetException;
+import java.text.SimpleDateFormat;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Date;
+import java.util.List;
+import java.util.UUID;
 import lombok.SneakyThrows;
 import org.folio.bulkops.BaseTest;
 import org.folio.bulkops.domain.dto.BulkOperationMarcRule;
@@ -38,14 +45,6 @@ import org.marc4j.marc.impl.SubfieldImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
-import java.lang.reflect.InvocationTargetException;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Date;
-import java.util.List;
-import java.util.UUID;
-
 class MarcInstanceDataProcessorTest extends BaseTest {
   @MockitoBean
   private ErrorService errorService;
@@ -57,14 +56,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldApplyFindAndAppendRule() {
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -89,34 +80,42 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField = new DataFieldImpl("500", '1', ' ');
     dataField.addSubfield(new SubfieldImpl('b', "text b"));
     marcRecord.addVariableField(dataField);
+    var bulkOperationId = UUID.randomUUID();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("\\")
-      .subfield("b")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text"))),
-        new MarcAction()
-          .name(UpdateActionType.APPEND)
-          .data(List.of(
-            new MarcActionDataInner()
-              .key(MarcDataType.VALUE)
-              .value("text a"),
-            new MarcActionDataInner()
-              .key(MarcDataType.SUBFIELD)
-              .value("a")))));
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("\\")
+            .subfield("b")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text"))),
+                    new MarcAction()
+                            .name(UpdateActionType.APPEND)
+                            .data(List.of(
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.VALUE)
+                                            .value("text a"),
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.SUBFIELD)
+                                            .value("a")))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
-
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
+            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -135,14 +134,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldApplyFindAndRemoveField() {
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -158,28 +149,31 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField = new DataFieldImpl("510", '1', '1');
     dataField.addSubfield(new SubfieldImpl('a', "text a"));
     marcRecord.addVariableField(dataField);
-    var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("1")
-      .subfield("a")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text"))),
-        new MarcAction()
-          .name(UpdateActionType.REMOVE_FIELD)
-          .data(Collections.emptyList())));
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
+    var bulkOperationId = UUID.randomUUID();
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
+    var findAndAppendRule = new BulkOperationMarcRule().bulkOperationId(bulkOperationId).tag("500")
+            .ind1("1").ind2("1").subfield("a").actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text"))),
+                    new MarcAction()
+                            .name(UpdateActionType.REMOVE_FIELD)
+                            .data(Collections.emptyList())));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule)).totalRecords(1);
 
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream()
+            .filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -194,14 +188,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldApplyFindAndRemoveSubfield() {
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -224,28 +210,37 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField.addSubfield(new SubfieldImpl('a', "text a"));
     dataField.addSubfield(new SubfieldImpl('b', "text b"));
     marcRecord.addVariableField(dataField);
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
+    var bulkOperationId = UUID.randomUUID();
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("1")
-      .subfield("a")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text"))),
-        new MarcAction()
-          .name(UpdateActionType.REMOVE_SUBFIELD)
-          .data(Collections.emptyList())));
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("1")
+            .subfield("a")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text"))),
+                    new MarcAction()
+                            .name(UpdateActionType.REMOVE_SUBFIELD)
+                            .data(Collections.emptyList())));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
 
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
+            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -262,14 +257,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldApplyFindAndReplaceRule() {
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -291,31 +278,40 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField = new DataFieldImpl("510", '1', ' ');
     dataField.addSubfield(new SubfieldImpl('a', "old value"));
     marcRecord.addVariableField(dataField);
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
+    var bulkOperationId = UUID.randomUUID();
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     var findAndReplaceRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("\\")
-      .subfield("a")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("old"))),
-        new MarcAction()
-          .name(UpdateActionType.REPLACE_WITH)
-          .data(List.of(
-            new MarcActionDataInner()
-              .key(MarcDataType.VALUE)
-              .value("new")))));
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("\\")
+            .subfield("a")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("old"))),
+                    new MarcAction()
+                            .name(UpdateActionType.REPLACE_WITH)
+                            .data(List.of(
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.VALUE)
+                                            .value("new")))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndReplaceRule))
-      .totalRecords(1);
+            .bulkOperationMarcRules(Collections.singletonList(findAndReplaceRule))
+            .totalRecords(1);
 
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
+            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -346,14 +342,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldApplyRemoveAllRule() {
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -378,25 +366,33 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField = new DataFieldImpl("510", '1', ' ');
     dataField.addSubfield(new SubfieldImpl('a', "Text a"));
     marcRecord.addVariableField(dataField);
+    var bulkOperationId = UUID.randomUUID();
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("\\")
-      .subfield("a")
-      .actions(List.of(
-        new MarcAction()
-          .name(UpdateActionType.REMOVE_ALL)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text a")))));
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("\\")
+            .subfield("a")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(UpdateActionType.REMOVE_ALL)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text a")))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
-
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
     processor.update(operation, marcRecord, rules, date);
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
+            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -424,19 +420,13 @@ class MarcInstanceDataProcessorTest extends BaseTest {
 
   @ParameterizedTest
   @CsvSource(textBlock = """
-    null   | text b | b    | Action data VALUE is absent.    | ID   | true
-    text a | null   | b    | Action data VALUE is absent.    | ID   | false
-    text a | text b | null | Action data SUBFIELD is absent. | HRID | false
-    """, delimiter = '|', nullValues = "null")
-  void shouldSaveErrorsOnBadRule(String findValue, String appendValue, String subfieldValue, String errorMessage,
-    IdentifierType identifierType, boolean isInstanceId) {
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(identifierType)
-      .build();
-    var hrid = "inst000001";
-    var controlNumberField = new ControlFieldImpl("001", hrid);
+          null   | text b | b    | Action data VALUE is absent.    | ID   | true
+          text a | null   | b    | Action data VALUE is absent.    | ID   | false
+          text a | text b | null | Action data SUBFIELD is absent. | HRID | false
+          """, delimiter = '|', nullValues = "null")
+  void shouldSaveErrorsOnBadRule(String findValue, String appendValue, String subfieldValue,
+                                 String errorMessage, IdentifierType identifierType,
+                                 boolean isInstanceId) {
     var dataField500 = new DataFieldImpl("500", '1', '2');
     dataField500.addSubfield(new SubfieldImpl('a', "text a"));
     var instanceId = UUID.randomUUID().toString();
@@ -444,36 +434,42 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField999.addSubfield(new SubfieldImpl('i', instanceId));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
+    var hrid = "inst000001";
+    var controlNumberField = new ControlFieldImpl("001", hrid);
     marcRecord.addVariableField(controlNumberField);
     marcRecord.addVariableField(dataField500);
     if (isInstanceId) {
       marcRecord.addVariableField(dataField999);
     }
+    var bulkOperationId = UUID.randomUUID();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("2")
-      .subfield("a")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value(findValue))),
-        new MarcAction()
-          .name(UpdateActionType.APPEND)
-          .data(List.of(
-            new MarcActionDataInner()
-              .key(MarcDataType.VALUE)
-              .value(appendValue),
-            new MarcActionDataInner()
-              .key(MarcDataType.SUBFIELD)
-              .value(subfieldValue)))));
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("2")
+            .subfield("a")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value(findValue))),
+                    new MarcAction()
+                            .name(UpdateActionType.APPEND)
+                            .data(List.of(
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.VALUE)
+                                            .value(appendValue),
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.SUBFIELD)
+                                            .value(subfieldValue)))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
-
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(identifierType)
+            .build();
     processor.update(operation, marcRecord, rules, new Date());
 
     var identifier = isInstanceId ? instanceId : hrid;
@@ -482,16 +478,12 @@ class MarcInstanceDataProcessorTest extends BaseTest {
 
   @ParameterizedTest
   @CsvSource(textBlock = """
-    FIND                  | MARK_AS_STAFF_ONLY    | MARK_AS_STAFF_ONLY
-    FIND                  | null                  | FIND
-    FIND_AND_REMOVE_THESE | null                  | FIND_AND_REMOVE_THESE
-    """, delimiter = '|', nullValues = "null")
-  void shouldNotApplyUnsupportedAction(UpdateActionType updateActionType1, UpdateActionType updateActionType2, String errorMessageArg) {
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.HRID)
-      .build();
+          FIND                  | MARK_AS_STAFF_ONLY    | MARK_AS_STAFF_ONLY
+          FIND                  | null                  | FIND
+          FIND_AND_REMOVE_THESE | null                  | FIND_AND_REMOVE_THESE
+          """, delimiter = '|', nullValues = "null")
+  void shouldNotApplyUnsupportedAction(UpdateActionType updateActionType1,
+                                       UpdateActionType updateActionType2, String errorMessageArg) {
     var hrid = "inst000001";
     var controlNumberField = new ControlFieldImpl("001", hrid);
     var marcRecord = new RecordImpl();
@@ -503,23 +495,26 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     if (updateActionType2 != null) {
       actions.add(new MarcAction().name(updateActionType2));
     }
-
+    var bulkOperationId = UUID.randomUUID();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("500")
-      .ind1("1")
-      .ind2("2")
-      .subfield("a")
-      .actions(actions);
+            .bulkOperationId(bulkOperationId)
+            .tag("500")
+            .ind1("1")
+            .ind2("2")
+            .subfield("a")
+            .actions(actions);
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.HRID)
+            .build();
 
     processor.update(operation, marcRecord, rules, new Date());
 
-    var errorMessageTemplate = FIND.equals(updateActionType1) && nonNull(updateActionType2) ?
-      "Action FIND + %s is not supported yet." :
-      "Action %s is not supported yet.";
+    var errorMessageTemplate = FIND.equals(updateActionType1) && nonNull(updateActionType2)
+            ? "Action FIND + %s is not supported yet." : "Action %s is not supported yet.";
     var errorMessage = String.format(errorMessageTemplate, errorMessageArg);
     verify(errorService).saveError(bulkOperationId, hrid, errorMessage, ErrorType.ERROR);
   }
@@ -527,14 +522,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldApplyAddToExistingRule() {
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -547,47 +534,57 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     dataField = new DataFieldImpl("550", '1', '1');
     dataField.addSubfield(new SubfieldImpl('a', "text a"));
     marcRecord.addVariableField(dataField);
+    var bulkOperationId = UUID.randomUUID();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("510")
-      .ind1("1")
-      .ind2("1")
-      .subfield("b")
-      .actions(List.of(
-        new MarcAction()
-          .name(ADD_TO_EXISTING)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text b"))),
-        new MarcAction()
-          .name(ADDITIONAL_SUBFIELD)
-          .data(Collections.emptyList())))
-      .subfields(List.of(new MarcSubfieldAction()
-          .subfield("1")
-          .actions(List.of(new MarcAction()
-              .name(ADD_TO_EXISTING)
-              .data(Collections.singletonList(new MarcActionDataInner()
-                .key(MarcDataType.VALUE)
-                .value("text 1"))),
-            new MarcAction()
-              .name(ADDITIONAL_SUBFIELD)
-              .data(Collections.emptyList()))),
-        new MarcSubfieldAction()
-          .subfield("a")
-          .actions(List.of(new MarcAction()
-              .name(ADD_TO_EXISTING)
-              .data(Collections.singletonList(new MarcActionDataInner()
-                .key(MarcDataType.VALUE)
-                .value("text a"))),
-            new MarcAction()
-              .name(ADDITIONAL_SUBFIELD)
-              .data(Collections.emptyList())))));
+            .bulkOperationId(bulkOperationId)
+            .tag("510")
+            .ind1("1")
+            .ind2("1")
+            .subfield("b")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(ADD_TO_EXISTING)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text b"))),
+                    new MarcAction()
+                            .name(ADDITIONAL_SUBFIELD)
+                            .data(Collections.emptyList())))
+            .subfields(List.of(new MarcSubfieldAction()
+                            .subfield("1")
+                            .actions(List.of(new MarcAction()
+                                            .name(ADD_TO_EXISTING)
+                                            .data(Collections.singletonList(
+                                                    new MarcActionDataInner()
+                                                    .key(MarcDataType.VALUE)
+                                                    .value("text 1"))),
+                                    new MarcAction()
+                                            .name(ADDITIONAL_SUBFIELD)
+                                            .data(Collections.emptyList()))),
+                    new MarcSubfieldAction()
+                            .subfield("a")
+                            .actions(List.of(new MarcAction()
+                                            .name(ADD_TO_EXISTING)
+                                            .data(Collections.singletonList(
+                                                    new MarcActionDataInner()
+                                                    .key(MarcDataType.VALUE)
+                                                    .value("text a"))),
+                                    new MarcAction()
+                                            .name(ADDITIONAL_SUBFIELD)
+                                            .data(Collections.emptyList())))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
-
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     processor.update(operation, marcRecord, rules, date);
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
+            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101111212.4");
@@ -604,11 +601,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldNotChange005FieldIfRulesAreNotApplied() {
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -618,35 +610,39 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     var dataField = new DataFieldImpl("500", '1', ' ');
     dataField.addSubfield(new SubfieldImpl('b', "text b"));
     marcRecord.addVariableField(dataField);
-
+    var bulkOperationId = UUID.randomUUID();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("900")
-      .ind1("1")
-      .ind2("\\")
-      .subfield("b")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text b"))),
-        new MarcAction()
-          .name(UpdateActionType.APPEND)
-          .data(List.of(
-            new MarcActionDataInner()
-              .key(MarcDataType.VALUE)
-              .value("text a"),
-            new MarcActionDataInner()
-              .key(MarcDataType.SUBFIELD)
-              .value("a")))));
+            .bulkOperationId(bulkOperationId)
+            .tag("900")
+            .ind1("1")
+            .ind2("\\")
+            .subfield("b")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text b"))),
+                    new MarcAction()
+                            .name(UpdateActionType.APPEND)
+                            .data(List.of(
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.VALUE)
+                                            .value("text a"),
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.SUBFIELD)
+                                            .value("a")))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
-
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     processor.update(operation, marcRecord, rules, new Date());
 
-    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
+    var dateTimeControlFieldOpt = marcRecord.getControlFields().stream().filter(
+            f -> DATE_TIME_CONTROL_FIELD.equals(f.getTag())).findFirst();
     assertTrue(dateTimeControlFieldOpt.isPresent());
     var marcUpdateDateTime = dateTimeControlFieldOpt.get().getData();
     assertThat(marcUpdateDateTime).isEqualTo("20240101100202.4");
@@ -655,15 +651,6 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldSaveErrorOnRuleValidationException() {
-    var identifier = "identifier";
-    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
-    var simpleDateFormat = new SimpleDateFormat(pattern);
-    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
-    var bulkOperationId = UUID.randomUUID();
-    var operation = BulkOperation.builder()
-      .id(bulkOperationId)
-      .identifierType(IdentifierType.ID)
-      .build();
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
 
@@ -675,38 +662,46 @@ class MarcInstanceDataProcessorTest extends BaseTest {
     marcRecord.addVariableField(dataField);
 
     dataField = new DataFieldImpl("999", 'f', 'f');
+    var identifier = "identifier";
     dataField.addSubfield(new SubfieldImpl('i', identifier));
     marcRecord.addVariableField(dataField);
-
+    var bulkOperationId = UUID.randomUUID();
     var findAndAppendRule = new BulkOperationMarcRule()
-      .bulkOperationId(bulkOperationId)
-      .tag("001")
-      .ind1("1")
-      .ind2("\\")
-      .subfield("b")
-      .actions(List.of(
-        new MarcAction()
-          .name(FIND)
-          .data(Collections.singletonList(new MarcActionDataInner()
-            .key(MarcDataType.VALUE)
-            .value("text b"))),
-        new MarcAction()
-          .name(UpdateActionType.APPEND)
-          .data(List.of(
-            new MarcActionDataInner()
-              .key(MarcDataType.VALUE)
-              .value("text a"),
-            new MarcActionDataInner()
-              .key(MarcDataType.SUBFIELD)
-              .value("a")))));
+            .bulkOperationId(bulkOperationId)
+            .tag("001")
+            .ind1("1")
+            .ind2("\\")
+            .subfield("b")
+            .actions(List.of(
+                    new MarcAction()
+                            .name(FIND)
+                            .data(Collections.singletonList(new MarcActionDataInner()
+                                    .key(MarcDataType.VALUE)
+                                    .value("text b"))),
+                    new MarcAction()
+                            .name(UpdateActionType.APPEND)
+                            .data(List.of(
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.VALUE)
+                                            .value("text a"),
+                                    new MarcActionDataInner()
+                                            .key(MarcDataType.SUBFIELD)
+                                            .value("a")))));
     var rules = new BulkOperationMarcRuleCollection()
-      .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
-      .totalRecords(1);
-
+            .bulkOperationMarcRules(Collections.singletonList(findAndAppendRule))
+            .totalRecords(1);
+    var pattern = "yyyy/MM/dd HH:mm:ss.SSS";
+    var simpleDateFormat = new SimpleDateFormat(pattern);
+    var date = simpleDateFormat.parse("2024/01/01 11:12:12.454");
+    var operation = BulkOperation.builder()
+            .id(bulkOperationId)
+            .identifierType(IdentifierType.ID)
+            .build();
     processor.update(operation, marcRecord, rules, date);
 
     var expectedErrorMessage = "Bulk edit of 001 field is not supported";
-    verify(errorService).saveError(bulkOperationId, identifier, expectedErrorMessage, ErrorType.ERROR);
+    verify(errorService).saveError(bulkOperationId, identifier, expectedErrorMessage,
+            ErrorType.ERROR);
   }
 
   @Test
@@ -716,7 +711,8 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .actions(List.of(new MarcAction().name(UpdateActionType.SET_TO_TRUE)));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
-    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
     assertThat(marcRecord.getLeader().getRecordStatus()).isEqualTo('d');
@@ -729,7 +725,8 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .actions(List.of(new MarcAction().name(UpdateActionType.SET_TO_FALSE)));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
-    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
     assertThat(marcRecord.getLeader().getRecordStatus()).isEqualTo('c');
@@ -742,15 +739,19 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .actions(List.of(new MarcAction().name(UpdateActionType.APPEND)));
     var marcRecord = new RecordImpl();
     marcRecord.setLeader(new LeaderImpl("04295nam a22004573a 4500"));
-    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("applyRuleToRecord",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
-    var exception = assertThrows(InvocationTargetException.class, () -> method.invoke(processor, rule, marcRecord));
+    var exception = assertThrows(InvocationTargetException.class, () -> method.invoke(processor,
+            rule, marcRecord));
     assertThat(exception.getCause()).isInstanceOf(BulkOperationException.class);
-    assertThat(exception.getCause().getMessage()).contains("is not supported for SET_RECORDS_FOR_DELETE option.");
+    assertThat(exception.getCause().getMessage()).contains(
+            "is not supported for SET_RECORDS_FOR_DELETE option.");
   }
 
   @Test
-  void processAddToExisting_shouldHaveChangesInMrcIfSubjectTagAndSubfieldNotLetterOr2() throws Exception {
+  void processAddToExisting_shouldHaveChangesInMrcIfSubjectTagAndSubfieldNotLetterOr2()
+          throws Exception {
     var tag = "650";
     var ind1 = "1";
     var ind2 = "0";
@@ -762,11 +763,13 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .ind2(ind2)
             .subfield(subfield)
             .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
+                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
+                            .value(value)))));
     var marcRecord = new RecordImpl();
 
     // Use reflection to call private method
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
@@ -775,7 +778,8 @@ class MarcInstanceDataProcessorTest extends BaseTest {
   }
 
   @Test
-  void processAddToExisting_shouldHaveMarcValueInAreYouSureIfSubjectTagInd2is7Subfield2AndSourceNotExists() throws Exception {
+  void processAddToExisting_shouldHaveMarcInAreYouSureIfSubjectTagInd2is7Subfield2AndSrcNotExists()
+          throws Exception {
     var tag = "650";
     var ind1 = "1";
     var ind2 = "7";
@@ -787,16 +791,19 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .ind2(ind2)
             .subfield(subfield)
             .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
+                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
+                            .value(value)))));
     var marcRecord = new RecordImpl();
 
     when(subjectReferenceService.getSubjectSourceNameByCode(value)).thenReturn(HYPHEN);
 
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
-    assertThat(marcRecord.getDataFields().getFirst().getSubfields().getFirst().getData()).isEqualTo("not-exist");
+    assertThat(marcRecord.getDataFields().getFirst().getSubfields().getFirst().getData())
+            .isEqualTo("not-exist");
   }
 
   @Test
@@ -812,10 +819,12 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .ind2(ind2)
             .subfield(subfield)
             .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
+                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
+                            .value(value)))));
     var marcRecord = new RecordImpl();
 
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
@@ -839,10 +848,12 @@ class MarcInstanceDataProcessorTest extends BaseTest {
             .ind2(ind2)
             .subfield(subfield)
             .actions(List.of(new MarcAction().name(UpdateActionType.ADD_TO_EXISTING)
-                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE).value(value)))));
+                    .data(List.of(new MarcActionDataInner().key(MarcDataType.VALUE)
+                            .value(value)))));
     var marcRecord = new RecordImpl();
 
-    var method = processor.getClass().getDeclaredMethod("processAddToExisting", BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
+    var method = processor.getClass().getDeclaredMethod("processAddToExisting",
+            BulkOperationMarcRule.class, org.marc4j.marc.Record.class);
     method.setAccessible(true);
     method.invoke(processor, rule, marcRecord);
 
